# Copyright 2025 Matej Mužila

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "calgen"
version = "0.1"
license = "GPL-3.0-or-later"
authors = [
  { name="Matej Mužila", email="mmuzila@gmail.com" },
]
description = "Planning calendar generator"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = ["holidays", "tabulate", "pyfiglet"]


[project.scripts]
calgen = "calgen:app"
